charts/polaris/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: polaris-dashboard
spec:
  parentRefs:
    - name: http-gateway
      group: gateway.networking.k8s.io
      kind: Gateway
      namespace: envoy-gateway
      sectionName: https
  hostnames:
    - polaris.g4v.dev
  rules:
    - backendRefs:
        - name: polaris-dashboard
          port: 80
          kind: Service
      matches:
        - path:
            type: PathPrefix
            value: /
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: polaris-oidc
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: polaris
  oidc:
    provider:
      issuer: "https://auth.g4v.dev/application/o/polaris/"
    clientID: "j2wgwil5hXhUIiEE4pVZyy2WGKAafJjAbrtzZ4it"
    clientSecret:
      name: "polaris-client-secret"
    redirectURL: "https://polaris.g4v.dev/oauth2/callback"
    logoutPath: "/myapp/logout"
